src/yini_test/cases/golden/lenient/valid/comments/comment-after-end-marker.yini
@yini

^ Application
name = "lenient-comment-after-end-marker"
enabled = true

/END
// Comment after the document end marker is allowed.
