src/yini_test/cases/golden/lenient/invalid/comments/semicolon-inline-after-value.yini
@yini

^ Application
name = "lenient-semicolon-inline-after-value" ; Semicolon is not an inline comment marker.
